fix: align cards center in mobile view

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -253,6 +253,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
 
   .footer {
